# garuda

./: .gitignore  ABOUT.md  CHANGELOG.md  INSTALL.md  LICENSE-MIT  NOTICE  PLUGIN.md  README.md  spec.md
garuda/: Cargo.toml  config.toml  mixtral.toml
garuda/examples/: custom_backend.rs  gguf_dump.rs
garuda/src/: lib.rs  main.rs
garuda/src/anthropic/: mod.rs
garuda/src/api/: mod.rs
garuda/src/attention/: mod.rs
garuda/src/auth/: mod.rs
garuda/src/benchmark/: mod.rs
garuda/src/cache/: mod.rs
garuda/src/cli/: mod.rs
garuda/src/config/: mod.rs
garuda/src/core/: mod.rs
garuda/src/cuda/: mod.rs
garuda/src/gguf/: mod.rs
garuda/src/grpc/: mod.rs
garuda/src/llama/: mod.rs
garuda/src/llamacpp/: mod.rs
garuda/src/memory/: mod.rs
garuda/src/moe/: mod.rs
garuda/src/ollama/: mod.rs
garuda/src/predictor/: mod.rs
garuda/src/prefetch/: mod.rs
garuda/src/quant/: mod.rs
garuda/src/router/: mod.rs
garuda/src/runtime/: mod.rs
garuda/src/scheduler/: mod.rs
garuda/src/server/: mod.rs
garuda/src/session/: mod.rs
garuda/src/simd/: mod.rs
garuda/src/storage/: mod.rs
garuda/src/tgi/: mod.rs
garuda/src/tokenizer/: mod.rs  spm.rs
garuda/src/ui/: chat.html  mod.rs
garuda/src/websocket/: mod.rs
garuda/src/weights/: mod.rs
garuda/tests/: integration_test.rs
