[package]
name = "garuda"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
dashmap = "5.5"
rayon = "1.10"
memmap2 = "0.9"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.8", features = ["v4"] }
crossbeam = "0.8"
lru = "0.12"
blake3 = "1.5"
zstd = "0.13"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"
tokio-stream = "0.1"
headers = "0.4"
toml = "0.8"
async-stream = "0.3"

[profile.dev]
debug = 0

[profile.test]
debug = 0



